# vw-bandit

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: model_features.csv  sample_data_properties.json  sample_vowpul_wabbit_input.txt  user_feedback.csv  vw_input.txt
notebooks/: bandit_training.ipynb  create_feedback.ipynb  create_sample_data.ipynb
src/bandit/: __init__.py  train.py
src/bandit/utils/: data.py  processing.py
